--- a/fartuk2/fartuk2.csproj
+++ b/fartuk2/fartuk2.csproj
@@ -176,6 +176,22 @@
     <Content Include="Content\img\client3.jpg" />
     <Content Include="Content\img\client4.jpg" />
     <Content Include="Content\img\cross_lines.png" />
+    <Content Include="Content\img\fartucs\fartuk_1.jpg" />
+    <Content Include="Content\img\fartucs\fartuk_10.1.jpg" />
+    <Content Include="Content\img\fartucs\fartuk_10.jpg" />
+    <Content Include="Content\img\fartucs\fartuk_11.jpg" />
+    <Content Include="Content\img\fartucs\fartuk_12.jpg" />
+    <Content Include="Content\img\fartucs\fartuk_2.jpg" />
+    <Content Include="Content\img\fartucs\fartuk_3.jpg" />
+    <Content Include="Content\img\fartucs\fartuk_4.jpg" />
+    <Content Include="Content\img\fartucs\fartuk_5.1.jpg" />
+    <Content Include="Content\img\fartucs\fartuk_5.2.jpg" />
+    <Content Include="Content\img\fartucs\fartuk_5.jpg" />
+    <Content Include="Content\img\fartucs\fartuk_6.jpg" />
+    <Content Include="Content\img\fartucs\fartuk_7.jpg" />
+    <Content Include="Content\img\fartucs\fartuk_8.1.jpg" />
+    <Content Include="Content\img\fartucs\fartuk_8.jpg" />
+    <Content Include="Content\img\fartucs\fartuk_9jpg.jpg" />
     <Content Include="Content\img\inner_shade.png" />
     <Content Include="Content\img\izgotovlenie.png" />
     <Content Include="Content\img\loading.gif" />
